--- a/image/conf/zookeeper.properties
+++ b/image/conf/zookeeper.properties
@@ -16,5 +16,6 @@
 dataDir=/tmp/zookeeper
 # the port at which the clients will connect
 clientPort=2181
+clientPortAddress=localhost
 # disable the per-ip limit on the number of connections since this is a non-production config
 maxClientCnxns=0
