running code with single and multiple kafka and zookeeper

--- a/image/conf/server.properties
+++ b/image/conf/server.properties
@@ -17,14 +17,14 @@
 ############################# Server Basics #############################
 
 # The id of the broker. This must be set to a unique integer for each broker.
-broker.id=-1
+broker.id=1
 
 #Enable automatic broker id generation on the server?
 #When enabled the value configured for reserved.broker.max.id should be reviewed.
 broker.id.generation.enable=true
 
 #Max number that can be used for a broker.id
-reserved.broker.max.id=10000
+reserved.broker.max.id=999
 
 ############################# Socket Server Settings #############################
 
@@ -32,7 +32,7 @@ reserved.broker.max.id=10000
 port=9092
 
 # Hostname the broker will bind to. If not set, the server will bind to all interfaces
-host.name=localhost
+host.name=192.168.0.104
 
 # Hostname the broker will advertise to producers and consumers. If not set, it uses the
 # value for "host.name" if configured.  Otherwise, it will use the value returned from
@@ -43,6 +43,7 @@ host.name=localhost
 # it will publish the same port that the broker binds to.
 #advertised.port=<port accessible by clients>
 
+listeners=PLAINTEXT://0.0.0.0:9092
 # The number of threads handling network requests
 num.network.threads=3
  
