--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,57 @@
-zookeeper:
-  image: manukoli1986/zookeeper:v1
-  ports:
-   - "2181:2181"
-   - "2888:2888"
-   - "3888:3888"
-   - "5000:5000"
+version: '2'
+services:
+  zookeeper:
+    image: confluentinc/cp-zookeeper:latest
+    hostname: zookeeper
+    ports:
+      - "2181:2181"
+    environment:
+      ZOOKEEPER_SERVER_ID: 1
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+      ZOOKEEPER_INIT_LIMIT: 5
+      ZOOKEEPER_SYNC_LIMIT: 2
+      ZOOKEEPER_SERVERS: zookeeper:2888:3888
 
-kafka:
-  image: kafkacluster:v3
-  ports:
-    - "9092:9092"
-  links:
-    - zookeeper:zookeeper
-  volumes:
-    - ./image/conf:/opt/kafka/config
+
+  kafka:
+    image: confluentinc/cp-kafka:latest
+    hostname: kafka
+    ports:
+      - "9092:9092"
+    depends_on:
+      - zookeeper
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://${HOST_IP}:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      kafka_log_dirs: ./KAFKA-LOGS/
+
+
+  kafka_manager:
+    image: qnib/plain-kafka-manager:2018-04-25@sha256:8a30ced91432b9b3ef21bc66c4b5635690e1af823684fe6e29ab866d839d10ca
+    ports:
+      - "9000:9000"
+    depends_on:
+      - zookeeper
+    environment:
+      ZOOKEEPER_HOSTS: zookeeper:2181
+
+  redis:
+      image: redis
+      ports:
+        - "6379:6379"
+      volumes:
+        - "./data:/data"
+
+  aerospike:
+      image: aerospike/aerospike-server
+      environment:
+        - "NAMESPACE=testNS"
+        - "MEM_GB=5"
+      ports:
+        - "3000:3000"
+        - "3001:3001"
+        - "3002:3002"
+        - "3003:3003"
