--- a/kafkacluster.yaml
+++ b/kafkacluster.yaml
@@ -48,15 +48,12 @@ spec:
         - name: KAFKA_ZOOKEEPER_CONNECT
           value: "localhost:2181"
         - name: KAFKA_ADVERTISED_LISTENERS
-          value: "PLAINTEXT://0.0.0.0:9092"
+          value: "PLAINTEXT://localhost:9092"
         - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
           value: "1"
 #        - name: kafka_log_dirs
 #          value: ./KAFKA-LOGS/
 #      volumes:
-#        - name: kafka-config
-#          configMap:
-#            name: kafka-config
 ---
 apiVersion: v1 
 kind: Service 
@@ -69,6 +66,9 @@ spec:
   - port: 9092 
     targetPort: 9092 
     name: kafka-port
+  - port: 2181
+    targetPort: 2181 
+    name: zookeeper-port
   selector: 
     name: kafkacluster 
   type: LoadBalancer 
